--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.1",
-    "nodemailer": "^6.9.14"
-  },
-  "name": "y",
+  "name": "note-app",
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
@@ -14,5 +8,12 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14"
+  }
 }
